--- a/index.html
+++ b/index.html
@@ -1,232 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: Finance Analysis
+---
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Budapest Housing Market Analysis: 2009-2024</title>
+# Finance Analysis
 
-    <!-- Chart.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+## Budapest Housing Market Analysis
 
-    <!-- Marked.js for Markdown rendering -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+[View the complete Budapest Housing Market Analysis: 2009-2024](/budapest-housing-analysis/)
 
-    <!-- Custom styles -->
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
+This comprehensive analysis examines the Budapest housing market performance over the past 15 years, comparing it with S&P 500 returns and considering inflation impacts.
 
-        .container {
-            background-color: white;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+### Key Findings:
+- **Budapest Housing**: ~218% return (2010-2024)
+- **S&P 500**: ~400-450% return (2009-2024)
+- **Inflation Impact**: Significant effect on real returns
+- **Investment Comparison**: Detailed analysis of both options
 
-        h1 {
-            color: #2c3e50;
-            border-bottom: 3px solid #3498db;
-            padding-bottom: 10px;
-            margin-bottom: 30px;
-        }
-
-        h2 {
-            color: #34495e;
-            margin-top: 40px;
-            margin-bottom: 20px;
-            border-left: 4px solid #3498db;
-            padding-left: 15px;
-        }
-
-        h3 {
-            color: #2c3e50;
-            margin-top: 30px;
-            margin-bottom: 15px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-            background-color: white;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        th,
-        td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-            font-weight: 600;
-        }
-
-        tr:hover {
-            background-color: #f5f5f5;
-        }
-
-        .chart-container {
-            margin: 2rem 0;
-            padding: 1rem;
-            border: 1px solid #e0e0e0;
-            border-radius: 8px;
-            background-color: #fafafa;
-            min-height: 400px;
-        }
-
-        .chart-container canvas {
-            max-height: 500px;
-        }
-
-        .highlight {
-            background-color: #fff3cd;
-            padding: 15px;
-            border-left: 4px solid #ffc107;
-            margin: 20px 0;
-            border-radius: 4px;
-        }
-
-        .metric-box {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 20px 0;
-            text-align: center;
-        }
-
-        .metric-box h3 {
-            margin: 0 0 10px 0;
-            color: white;
-        }
-
-        .metric-box p {
-            margin: 0;
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-
-        .comparison-table {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-            color: white;
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        .comparison-table th {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
-
-        .comparison-table tr:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-
-        blockquote {
-            border-left: 4px solid #3498db;
-            margin: 20px 0;
-            padding: 10px 20px;
-            background-color: #f8f9fa;
-            font-style: italic;
-        }
-
-        .data-sources {
-            background-color: #e8f4fd;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 30px 0;
-        }
-
-        .data-sources h3 {
-            color: #2980b9;
-            margin-top: 0;
-        }
-
-        .data-sources ul {
-            margin: 0;
-            padding-left: 20px;
-        }
-
-        .data-sources li {
-            margin: 5px 0;
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 10px;
-            }
-
-            .container {
-                padding: 20px;
-            }
-
-            table {
-                font-size: 14px;
-            }
-
-            th,
-            td {
-                padding: 8px 10px;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <div id="content">
-            <!-- Content will be loaded here -->
-        </div>
-    </div>
-
-    <!-- Load the charts script -->
-    <script src="charts.js"></script>
-
-    <!-- Load and render markdown content -->
-    <script>
-        // Fetch and render the markdown content
-        fetch('budapest-housing-analysis.md')
-            .then(response => response.text())
-            .then(markdown => {
-                // Configure marked.js options
-                marked.setOptions({
-                    breaks: true,
-                    gfm: true
-                });
-
-                // Render markdown to HTML
-                const htmlContent = marked.parse(markdown);
-                document.getElementById('content').innerHTML = htmlContent;
-
-                // Initialize charts after content is loaded
-                setTimeout(() => {
-                    if (window.budapestHousingData) {
-                        // Charts will be initialized by charts.js
-                        console.log('Charts initialized successfully');
-                    }
-                }, 100);
-            })
-            .catch(error => {
-                console.error('Error loading markdown file:', error);
-                document.getElementById('content').innerHTML = `
-                    <h1>Budapest Housing Market Analysis: 2009-2024</h1>
-                    <p>Error loading content. Please ensure all files are in the same directory.</p>
-                `;
-            });
-    </script>
-</body>
-
-</html>
+[Read Full Analysis →](/budapest-housing-analysis/)
